--- a/index.html
+++ b/index.html
@@ -10,16 +10,21 @@
     <div class="container">
         <h1>Bus Ticket Booking</h1>
         <div id="bus-details">
-            <p>Bus Route: <strong>Route A - City Center to Park</strong></p>
-            <p>Number of Stops: <strong>5</strong></p>
+            <p>Bus Route: <strong>Route A - Razole to Amalapuram</strong></p>
+            <p>Number of Stops: <strong>10</strong></p>
             <ul id="stops-list">
-                <li>City Center</li>
-                <li>Main Square</li>
-                <li>Park Avenue</li>
-                <li>River Bridge</li>
-                <li>Park</li>
+                <li>Razole Bustand</li>
+                <li>Razole BABA Temple</li>
+                <li>Tatipaka center</li>
+                <li>Nagaram</li>
+                <li>Mamidikuduru</li>
+                <li>Pasarlapudi</li>
+                <li>Y-junction</li>
+                <li>SKBR</li>
+                <li>Clock tower</li>
+                <li>Bustand-AMP</li>
             </ul>
-            <p>Available Seats: <span id="available-seats">10</span> seats left</p>
+            <p>Available Seats: <span id="available-seats">60</span> seats left</p>
             <button id="book-ticket" onclick="bookTicket()">Book a Ticket</button>
             <div id="confirmation" style="display:none;">
                 <p>Ticket Booked Successfully! Enjoy your ride!</p>
